Update documentation with new syntax.

--- a/manual/index.html
+++ b/manual/index.html
@@ -42,7 +42,7 @@ serial console (9600 baud) and send it commands.</p>
 <p>Pulse sequences are defined by simple programs.  For example, the following
 program will generate 15 ms pulses on channel 1 for 3 seconds:</p>
 
-<pre><code>change channel 1 to repeat 15 ms on 85 ms off
+<pre><code>change channel 1 to 15 ms pulses at 10 Hz
 wait 3 s
 turn off channel 1
 end program
