add link back to home page

--- a/manual/index.html
+++ b/manual/index.html
@@ -18,13 +18,14 @@
       <div class="inner">
 
         <header>
-          <h1>ArduinoPulseGenerator</h1>
+        <h1><a href="..">ArduinoPulseGenerator</a></h1>
           <h2>User's manual</h2>
         </header>
 
         <hr>
 
         <section id="main_content">
+
           <h2>Table of Contents</h2>
           <ul>
               <li><a href="#intro">Introduction</a></li>
