fixes from hjc, interrupt

--- a/index.html
+++ b/index.html
@@ -35,14 +35,10 @@
 
 <p>ArduinoPulseGenerator is a simple program for generating pulse sequences
 (with pulse widths on the order of milliseconds) using an Arduino.  There is an
-associate GUI that runs on the local computer, or you can simply connect to the
+associated GUI that runs on the local computer, or you can simply connect to the
 Arduino with a serial console (9600 baud) and send it commands.  This code has
 been tested on the ArduinoMega 2560 and Arduino Due; it may work on other
 Arduino boards but this has not been tested.</p>
-
-<p>This is a quick hack for some electrophysiology work being done in our lab, but
-if you need specific features please request them by opening a new issue on
-github.</p>
 
 <h1>Building</h1>
 
