add missing bold

--- a/manual/index.html
+++ b/manual/index.html
@@ -117,7 +117,7 @@ Arduino will be used by the <b>Run on Device</b> button in this window.</p>
 <h3>Lock</h3>
 
 <p>The <b>Lock</b> checkbox allows you to lock the <b>Run on Device</b> button
-so that it can not be pressed until the lock checkbox is clicked again.  This
+so that it can not be pressed until the <b>Lock</b> checkbox is clicked again.  This
 is a safety feature requested by one of our users, because if the stimulation
 being used is dangerous to the experimenter or the experimental preparation,
 pressing the <b>Run on Device</b> button when you meant to press
