minor text changes

--- a/manual/index.html
+++ b/manual/index.html
@@ -36,7 +36,7 @@
 <h2 id="intro">Introduction</h2>
 
 <p>ArduinoPulseGenerator is a simple program for generating pulse sequences (with pulse widths on
-the order of milliseconds) using an Arduino.  There is an associated GUI that
+the order of seconds to milliseconds) using an Arduino.  There is an associated GUI that
 runs on the local computer, or you can simply connect to the Arduino with a
 serial console (9600 baud) and send it commands.</p>
 
@@ -162,7 +162,7 @@ example "2.13", "0", "123456.78", or "0.0023".</p>
 <h4>Time unit</h4>
 <p>A time unit can be "s" (seconds), "ms" (milliseconds), or "us" or "&mu;s" (both
 synonyms for microseconds).  Note that the accuracy of timing in this program is
-about &plusmn;200 microseconds on the Arduino Mega 2560 and about &plusmn;30
+about &plusmn;200 microseconds on the Arduino Mega 2560 and about &plusmn;35
 microseconds on the Arduino Due.</p>
 
 <h4>Interval</h4>
@@ -274,7 +274,7 @@ Example:</p>
 </section>
 
         <footer>
-          Arduinopulsegenerator is maintained by <a href="https://github.com/kms15">kms15</a><br>
+          Arduinopulsegenerator is maintained by <a href="https://github.com/kms15">Kendrick Shaw</a><br>
           Tactile theme by <a href="http://twitter.com/jasonlong">Jason Long</a>.
         </footer>
 
