Add screenshots and document traditional controls.

--- a/index.html
+++ b/index.html
@@ -31,15 +31,18 @@
         <hr>
 
         <section id="main_content">
-          <h1>ArduinoPulseGenerator</h1>
 
 <p>ArduinoPulseGenerator is a simple program for generating pulse sequences
-(with pulse widths on the order of seconds to milliseconds) using an Arduino.
-There is an associated GUI that runs on the local computer, or you can simply
-connect to the Arduino with a serial console (9600 baud) and send it commands.
-This code has been tested on the ArduinoMega 2560 (timing accuracy ~
-&plusmn;200 &mu;s) and Arduino Due (timing accuracy ~ &plusmn;35 &mu;s); it may
-work on other Arduino boards but this has not been tested.</p>
+using an Arduino.  There is an associated GUI that runs on the local computer,
+or you can simply connect to the Arduino with a serial console (9600 baud) and
+send it commands.  This code has been tested on the ArduinoMega 2560 (timing
+accuracy ~ &plusmn;200 &mu;s) and Arduino Due (timing accuracy ~ &plusmn;35
+&mu;s); it may work on other Arduino boards but this has not been tested.</p>
+
+<h1>Screen Shots</h1>
+
+        <p><img src="ScreenShot_SampleProgram.png"/></p>
+        <p><img src="ScreenShot_TraditionalControls.png"/></p>
 
 <h1>Building</h1>
 
