add links to compiled binaries

--- a/index.html
+++ b/index.html
@@ -22,9 +22,16 @@
           <h2>Use an Arduino to generate pulse sequences</h2>
         </header>
 
-        <section id=downloads" class="clearfix">
-          <a href="https://github.com/kms15/ArduinoPulseGenerator/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
-          <a href="https://github.com/kms15/ArduinoPulseGenerator/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
+        <section id="binarydownloads" class="clearfix">
+          <a href="http://sourceforge.net/projects/arduinopulsegen/files/ArduinoPulseGenerator-1.0-win.zip/download" id="download-zip" class="button"><span>Windows Binary</span></a>
+          <a href="http://sourceforge.net/projects/arduinopulsegen/files/ArduinoPulseGeneratorGui-mac-universal-v1_0.tar.bz2/download" id="download-zip" class="button"><span>Mac Binary</span></a>
+        </section>
+
+        <hr>
+
+        <section id="downloads" class="clearfix">
+          <a href="https://github.com/kms15/ArduinoPulseGenerator/zipball/master" id="download-zip" class="button"><span>Source .zip</span></a>
+          <a href="https://github.com/kms15/ArduinoPulseGenerator/tarball/master" id="download-tar-gz" class="button"><span>Source .tar.gz</span></a>
           <a href="https://github.com/kms15/ArduinoPulseGenerator" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
 
